# archlinuxcn-packages

./: .drone.yml  CHANGELOG.md  Cargo.toml  LICENSE  renovate.json
.gitea/workflows/: release.yaml  test.yaml
html/: current.html  logs.html
src/: main.rs
