[package]
name = "archlinuxcn-packages"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
ansi-to-html = "0.1.3"
anyhow = "1.0.75"
bigdecimal = "0.4.2"
cached = "0.46.1"
chrono = "0.4.31"
deadpool-postgres = "0.11.0"
enum-display-derive = "0.1.1"
openssl = { version = "0.10.59", features = ["vendored"] }
pg_bigdecimal = "0.1.5"
postgres-types = { version = "0.2.6", features = ["derive"]}
sentry = "0.31.8"
sentry-actix = "0.31.8"
serde = { version = "1.0.192", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"]}
yaml-rust = "0.4.5"
