[package]
name = "archlinuxcn-packages"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
ansi-to-html = "0.2.1"
bigdecimal = "0.4.2"
chrono = "0.4.31"
deadpool-postgres = "0.14.0"
enum-display-derive = "0.1.1"
pg_bigdecimal = "0.1.5"
postgres-types = { version = "0.2.6", features = ["derive"] }
sentry = "0.34.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
