[package]
name = "archlinuxcn-packages"
version = "0.3.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
ansi-to-html = "0.2.2"
bigdecimal = "0.4.8"
chrono = "0.4.40"
deadpool-postgres = "0.14.1"
enum-display-derive = "0.1.1"
openssl = { version = "0.10.72", features = ["vendored"] }
pg_bigdecimal = "0.1.5"
postgres-types = { version = "0.2.9", features = ["derive"] }
sentry = "0.46.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
